# MiniWASM

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  docker-shell.sh  index.html  serve.sh
src/: lib.rs
